@startuml uml-module-diagram
package "API" {
  class ConverterController {}
}
package "Converter" {
  class Converter
  class ConversionResult
}
package "Domain" {
  interface IUnit
  class UnitFactory
}
package "Database" {
  class UnitRepository
  class DBInitialize
}
package "Parser" {
  interface IParser
}

ConverterController --> Converter
ConverterController --> ConversionResult
ConverterController --> UnitRepository
Converter --> IUnit
Converter --> UnitFactory
UnitFactory --> UnitRepository

DBInitialize --> IParser

@enduml